--- a/normal/base.html
+++ b/normal/base.html
@@ -2,22 +2,14 @@
     <head>
         <script src="base.js"></script>
         <script type="text/ecmascript">
-        var t1=new test();
-        
-        console.log(t1.a,t1.toString(),t1.func(t1));
-        
-        let a= new test();
-        console.log(a.func(t1));
+        var dog1=new dog("dog1");
+        let ps= ['tom','mary'];
+        console.log(dog1,dog1.say(),dog1.helpPerson(...ps));
 
-        function fun1()
-        {
-            return "fun1";
-        }
-        console.log(fun1());
-
-        const a1=a;
-        a1.a=100;
-        console.log(a1);
+        const dog2=dog1;
+        dog2.age=2;
+        dog2.name="dog2";
+        console.log(dog2,dog2.say());
         </script>
     </head>
 
